# Leetcode-Solutions

./: .gitignore  CATALOG.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TOPICS.md  metadata.json  pyproject.toml
0000-notes/: README.md  binary-search.md
0001-Add-Two-Numbers/: README.md
0001-two-sum/: README.md  solution.py
0002-Add-Two-Numbers/: solution.py
0002-add-two-numbers/: README.md  solution.py
0003-longest-substring-without-repeating-characters/: README.md
0004-median-of-two-sorted-arrays/: README.md  solution.py  solution1.py
0005-longest-palindromic-substring/: README.md  solution.py
0006-zigzag-conversion/: README.md
0007-reverse-integer/: README.md  solution.py
0008-string-to-integer-atoi/: README.md
0009-palindrome-number/: README.md
0010-regular-expression-matching/: README.md  solution.py
0011-container-with-most-water/: README.md
0012-integer-to-roman/: README.md  solution.py
0013-roman-to-integer/: README.md
0014-longest-common-prefix/: README.md
0015-3sum/: README.md  solution.py
0026-remove-duplicates-from-sorted-array/: README.md
0027-remove-element/: README.md  solution.py
0028-find-the-index-of-the-first-occurrence-in-a-string/: README.md  solution.py
0066-plus-one/: README.md
0085-maximal-rectangle/: README.md
0121-best-time-to-buy-and-sell-stock/: README.md
0121-best-time-to-buy-and-shell-stock/: solution.py
0164-maximum-gap/: README.md  solution.py
0220-contains-duplicate-III/: README.md  solution.py
0220-contains-duplicate-iii/: solution.py
0242-valid-anagram/: README.md  solution2_counter.py
0679-24-game/: README.md
(+341 files in other folders)
