[project]
name = "leetcode-solutions"
version = "0.1.0"
description = "Python solutions and notes for LeetCode problems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
# Conservative defaults: pyflakes (F), pycodestyle errors (E), import sort (I).
# Style/complexity rules are intentionally NOT enabled.
select = ["E", "F", "I"]
ignore = [
    "E501",  # line too long
]

[tool.ruff.lint.per-file-ignores]
# LeetCode solution files use the judge runtime's TreeNode / ListNode without
# importing them, and routinely use single-letter variable names (l, r, i, j,
# k, n) that ruff's E741 flags as ambiguous. Import-sort (I001) is also waived
# because solution files are short, hand-curated for problem clarity, and not
# meant to be installed as a package. These are idiomatic for this repo.
"problems/[0-9]*/**/solution*.py" = ["F821", "E741", "I001"]
